--- a/myDiary.html
+++ b/myDiary.html
@@ -51,13 +51,13 @@
                 <div class="diary__subject">📍 일기 쓰기</div>
                 <div class="diary__question">오늘 기분은 어땠나요?</div>
 
-                <ul class="diary__radio">
+                <div class="diary__radio">
                     <input type="radio" name="mood" value="happy" id="radioHappy"/> <label for="radioHappy"> 행복해요 </label>
                     <input type="radio" name="mood" value="sad" id="radioSad"/> <label for="radioSad"> 슬퍼요 </label>
                     <input type="radio" name="mood" value="surprise" id="radioSurprise"/> <label for="radioSurprise"> 놀랐어요 </label>
                     <input type="radio" name="mood" value="angry" id="radioAngry"/> <label for="radioAngry"> 화나요 </label>
                     <input type="radio" name="mood" value="etc" id="radioEtc"/> <label for="radioEtc"> 기타 </label>
-                </ul>
+                </div>
 
                 <div class="diary__title">제목</div>
                 <input class="diary__titleInput" id="diaryTitle" type="text" placeholder="제목을 입력해 주세요." />
