✅ add: h1 태그 클릭 시 index 페이지로 이동하도록 수정

--- a/section03/edit.html
+++ b/section03/edit.html
@@ -12,7 +12,7 @@
     <div class="app">
       <header class="header">
         <h1 class="header-title">
-          <a href="">다인의 다이어리</a>
+          <a href="./index.html">다인의 다이어리</a>
         </h1>
       </header>
       <div class="app-inside">
