메인페이지 반응형 추가, 메인페이지 플로팅버튼 위치조정(푸터에안닿게)

--- a/homework/html/diaryDetail.html
+++ b/homework/html/diaryDetail.html
@@ -26,7 +26,10 @@
             <div class="diary-content">
               여기에는 다이어리의 본문 내용이 들어갑니다. 반복적으로 내용을 입력하고 있습니다.
             </div>
-            <button class="edit-button" onclick="editClick()">수정</button>
+            <div class="btn-area">
+              <button class="edit-button" onclick="editClick()">수정</button>
+              <button class="delete-button" onclick="deleteDiary(event)">삭제</button>
+            </div>
           </div>
         </div>
         <div class="diary-wrap disable">
