--- a/homework/html/homework2.html
+++ b/homework/html/homework2.html
@@ -10,7 +10,7 @@
 
   <body>
     <div class="scroll-up">
-      <img src="../assets/topscroll fab.png" alt="top" onclick="scrollUp()" />
+      <img id="scroll-id" src="../assets/topscroll fab.png" alt="top" onclick="scrollUp()" />
     </div>
     <div class="wrapper">
       <!-- 헤더 -->
@@ -64,7 +64,7 @@
                         <div class="feeling-title">오늘 기분은 어땠나요?</div>
                       </div>
                       <div class="feeling-choose">
-                        <input type="radio" name="feeling" id="happy" /> <label for="happy">행복해요</label>
+                        <input type="radio" name="feeling" id="happy" checked /> <label for="happy">행복해요</label>
                         <input type="radio" name="feeling" id="sad" /> <label for="sad">슬퍼요</label>
                         <input type="radio" name="feeling" id="surprise" /> <label for="surprise">놀랐어요</label>
                         <input type="radio" name="feeling" id="mad" /> <label for="mad">화나요</label>
@@ -100,10 +100,10 @@
 
     <!-- 푸터 -->
     <footer>
-      <div class="footer">
+      <div id="footer-id" class="footer">
         <div class="footer-contents">
           <div class="footer-content-1">민지의 다이어리</div>
-          <div class="footer-content-2">대표 : (name)</div>
+          <div class="footer-content-2">대표 : 민지</div>
           <div class="footer-content-3">Copyright 2024(name)Co.Ltd</div>
         </div>
       </div>
