[240904] JS: [수정] - 일기 생성 방식 변경에 따른 상세 및 수정페이지에서 데이터 불러오기 수정

--- a/01-diary/detail/detail_update.html
+++ b/01-diary/detail/detail_update.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./detail_update.css">
     <link rel="stylesheet" href="./detail_update_mobile.css">
     <script src="./detail_update.js"></script>
+    <script src="../common.js"></script>
 </head>
 <body>
     <div class="root_container">
