--- a/01-diary/index.html
+++ b/01-diary/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./index_1208.css">
     <link rel="stylesheet" href="./index_mobile.css">
     <script src="./index.js"></script>
+    <script src="./common.js"></script>
 </head>
 <body>
     <div class="header">
