--- a/01-diary/detail/detail.html
+++ b/01-diary/detail/detail.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./detail.css">
     <link rel="stylesheet" href="./detail_1208.css">
     <script src="./detail.js"></script>
+    <script src="../common.js"></script>
 </head>
 
 <body>
