--- a/CSS&JS 마스터/수정.html
+++ b/CSS&JS 마스터/수정.html
@@ -33,17 +33,19 @@
                     </div>
                 </div>
             </div>
-            <div class="main_body_title">
-                <label for="titleBox">제목</label>
-                <input type="text" id="titleBox">   
-            </div>
-            <div class="main_body_content">
-                <label for="contentBox">내용</label>
-                <textarea name="contentBox" id="contentBox"></textarea>
-            </div>
-            <div class="main_button">
-                <button onclick="cancel()">취소</button>
-                <button onclick="modify()">수정하기</button>
+            <div class="testBox">
+                <div class="main_body_title">
+                    <label for="titleBox">제목</label>
+                    <input type="text" id="titleBox">   
+                </div>
+                <div class="main_body_content">
+                    <label for="contentBox">내용</label>
+                    <textarea name="contentBox" id="contentBox"></textarea>
+                </div>
+                <div class="main_button">
+                    <button onclick="cancel()">취소</button>
+                    <button onclick="modify()">수정하기</button>
+                </div>
             </div>
         </main>
         <div class="remembranceBox">
