[240903] 김민정 section04 필수과제 제출

--- a/[240829]_section01/detail.html
+++ b/[240829]_section01/detail.html
@@ -7,9 +7,12 @@
   <body>
     <div class="container">
       <div class="header">
-        <p id="diaryName">민정이의 다이어리</p>
+        <p id="diaryName"></p>
       </div>
       <div id="diaryDetail"></div>
+    </div>
+    <div class="floating-btn" onclick="scrollToTop()">
+      <img src="./images/arrow_down.png" style="transform: rotate(180deg)" />
     </div>
     <script src="./detail.js"></script>
   </body>
