--- a/다이어리/diary-edit.html
+++ b/다이어리/diary-edit.html
@@ -11,7 +11,8 @@
         <div class="header">
           <div class="header_frame">
             <a href="./diary.html">
-              <div class="logo">예슬이의 다이어리</div>
+              <img src="./image/back.png" />
+              <div class="logo">일기 수정</div>
             </a>
           </div>
         </div>
