내용 복사하기 버튼 추가

--- a/detail.html
+++ b/detail.html
@@ -29,9 +29,15 @@
           >
         </div>
       </div>
-      <p class="detailContent">
-        <!-- 이것에 내용이 노출됩니다. -->
-      </p>
+      <div class="detailContentWrap">
+        <p class="detailContent">
+          <!-- 이것에 내용이 노출됩니다. -->
+        </p>
+        <button class="copyBtn" onclick="textCopy()">
+          <img src="./img/copy_outline_light_m.svg" alt="복사아이콘" /> 내용
+          복사
+        </button>
+      </div>
       <div class="buttonWrap">
         <!-- <button class="whiteBtn">목록</button> -->
         <button class="whiteBtn editBtn" onclick="editBtn()">수정</button>
