--- a/다이어리/diary.html
+++ b/다이어리/diary.html
@@ -37,84 +37,90 @@
                     <li class="etc"><a href="#">기타</a></li>
                   </ul>
                 </div>
+                <button class="btn_register_diary" onclick="triggerDiaryWriteModal()">+ 일기추가</button>
               </div>
             </div>
           </div>
           <div class="main">
             <div class="article" id="article"></div>
-            <div class="aside">
-              <div class="diary_entry_title">📍 일기 쓰기</div>
-              <div class="diary_entry_form">
-                <div class="mood_selector">
-                  <div class="mood_selector_title">오늘 기분 어땠나요?</div>
-                  <div class="mood_checkbox_group">
-                    <div class="mood_checkbox">
-                      <input
-                        type="radio"
-                        id="check_happy"
-                        class="mood_options"
-                        name="mood"
-                      /><label for="check_happy" class="mood_text"
-                        >행복해요</label
-                      >
+            <div id="aside_layout">
+              <div class="aside">
+                <div class="diary_entry_title">📍 일기 쓰기</div>
+                <div class="diary_entry_form">
+                  <div class="mood_selector">
+                    <div class="mood_selector_title">오늘 기분 어땠나요?</div>
+                    <div class="mood_checkbox_group">
+                      <div class="mood_checkbox">
+                        <input
+                          type="radio"
+                          id="check_happy"
+                          class="mood_options"
+                          name="mood"
+                        /><label for="check_happy" class="mood_text"
+                          >행복해요</label
+                        >
+                      </div>
+                      <div class="mood_checkbox">
+                        <input
+                          type="radio"
+                          id="check_sad"
+                          class="mood_options"
+                          name="mood"
+                        /><label for="check_sad" class="mood_text">슬퍼요</label>
+                      </div>
+                      <div class="mood_checkbox">
+                        <input
+                          type="radio"
+                          id="check_surprise"
+                          class="mood_options"
+                          name="mood"
+                        /><label for="check_surprise" class="mood_text"
+                          >놀랐어요</label
+                        >
+                      </div>
+                      <div class="mood_checkbox">
+                        <input
+                          type="radio"
+                          id="check_upset"
+                          class="mood_options"
+                          name="mood"
+                        /><label for="check_upset" class="mood_text"
+                          >화나요</label
+                        >
+                      </div>
+                      <div class="mood_checkbox">
+                        <input
+                          type="radio"
+                          id="check_etc"
+                          class="mood_options"
+                          name="mood"
+                        /><label for="check_etc">기타</label>
+                      </div>
                     </div>
-                    <div class="mood_checkbox">
+                  </div>
+                  <div class="diary_textArea">
+                    <div class="diary_title_group">
+                      <div class="diary_title">제목</div>
                       <input
-                        type="radio"
-                        id="check_sad"
-                        class="mood_options"
-                        name="mood"
-                      /><label for="check_sad" class="mood_text">슬퍼요</label>
+                        class="diary_title_window"
+                        type="text"
+                        placeholder="제목을 입력해 주세요."
+                      />
                     </div>
-                    <div class="mood_checkbox">
-                      <input
-                        type="radio"
-                        id="check_surprise"
-                        class="mood_options"
-                        name="mood"
-                      /><label for="check_surprise" class="mood_text"
-                        >놀랐어요</label
-                      >
-                    </div>
-                    <div class="mood_checkbox">
-                      <input
-                        type="radio"
-                        id="check_upset"
-                        class="mood_options"
-                        name="mood"
-                      /><label for="check_upset" class="mood_text"
-                        >화나요</label
-                      >
-                    </div>
-                    <div class="mood_checkbox">
-                      <input
-                        type="radio"
-                        id="check_etc"
-                        class="mood_options"
-                        name="mood"
-                      /><label for="check_etc">기타</label>
+                    <div class="diary_contents_group">
+                      <div class="diary_contents" id="diary_contents">내용</div>
+                      <textarea
+                        class="diary_contents_window"
+                        type="text"
+                        placeholder="내용을 입력해 주세요."
+                      ></textarea>
                     </div>
                   </div>
                 </div>
-                <div class="diary_textArea">
-                  <div class="diary_title_group">
-                    <div class="diary_title">제목</div>
-                    <input
-                      class="diary_title_window"
-                      type="text"
-                      placeholder="제목을 입력해 주세요."
-                    />
-                  </div>
-                  <div class="diary_contents_group">
-                    <div class="diary_contents" id="diary_contents">내용</div>
-                    <textarea
-                      class="diary_contents_window"
-                      type="text"
-                      placeholder="내용을 입력해 주세요."
-                    ></textarea>
-                  </div>
+                <div class="modal_button">
+                  <button class="close_button" onclick="showDiaryCancelConfirmationModal()">닫기</button>
+                  <button class="register_button" onclick="showDiaryRegistrationModal()">등록하기</button>
                 </div>
-                <button class="register_button">등록하기</button>
               </div>
             </div>
             <button onclick="upScroll()" class="topScroll">
