[240905] DAY07 section04 모바일반응형

--- a/DAY04/diary-detail.html
+++ b/DAY04/diary-detail.html
@@ -51,6 +51,14 @@
           <div class="댓글목록컨테이너"></div>
           <!-- 여기에 댓글이 추가된다 -->
         </div>
+        <div id="위로올리기">
+          <img
+            src="./images/icons/Up outline light xl.png"
+            alt="위로 가기"
+            width="40"
+            height="40"
+          />
+        </div>
       </div>
     </main>
   </body>
