--- a/CSS&JS 마스터/일기보관함.html
+++ b/CSS&JS 마스터/일기보관함.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
         <link rel="stylesheet" href="./일기보관함.css">
         <script src="./일기보관함.js"></script>
