--- a/detail.html
+++ b/detail.html
@@ -10,7 +10,7 @@
   <body>
     <!--헤더-->
     <div class="CSS_헤더">
-      <div>민지의 다이어리</div>
+      <div><a href="javascript:history.back()">❮ 메인 이동</a></div>
     </div>
 
     <!--일기 상세 보여주는 영역-->
@@ -30,7 +30,6 @@
             작성
           </div>
         </div>
-      </div>
 
       <!--내용-->
       <div class="CSS_일기내용">
@@ -43,10 +42,32 @@
 
       <!--버튼-->
       <div class="CSS_수정버튼_영역">
-        <button class="CSS_수정버튼" onclick="JS_수정하러가기기능()">
-          수정
+        <button class="CSS_버튼" onclick="JS_수정하러가기기능()">수정</button>
+        <button class="CSS_버튼" onclick="JS_일기삭제기능()">삭제</button>
+      </div>
+
+      <!--회고-->
+      <span class="CSS_구분선"></span>
+      <div class="CSS_회고제목">회고</div>
+      <div class="CSS_회고입력영역">
+        <input
+          placeholder="회고를 남겨보세요."
+          class="CSS_회고입력부분"
+          id="HTML_회고입력부분"
+        />
+        <button onclick="JS_회고추가기능()" class="CSS_회고입력버튼">
+          입력
         </button>
       </div>
+      <div id="HTML_회고목록영역"></div>
+            <!--플로팅버튼-->
+            <button id="HTML_플로팅버튼" class="CSS_플로팅버튼">
+              <img
+                class="CSS_플로팅이미지"
+                src="./assets/images/floatingButton.png"
+                onclick="JS_스크롤위로기능()"
+              />
+            </button>
     </div>
   </body>
 </html>
